--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <meta name="author" content="Matthew Cline">
+    <meta name="description" content="WDD 230 Student Portal for Matthew Cline at BYU-Idaho, Spring Semester 2023">
+    <title>BYU-Idaho Student Portal</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    
+<body class="content"">
+    <header class="banner">
+        <div class="banner-image">
+            <img src="images/Me.jpg" alt="Me">
+        </div>
+        <div class="banner-heading"><h1>Matthew A Cline</h1></div>
+    </header>
+    <main class="lessons">
+        <h1>WDD 230: Assignment Portal</h1>
+        <ul>
+            <li>Lesson 02:<a href="#">Title</a></li>
+            <li>Lesson 03:<a href="#">Title</a></li>
+            <li>Lesson 04:<a href="#">Title</a></li>
+            <li>Lesson 05:<a href="#">Title</a></li>
+            <li>Lesson 06:<a href="#">Title</a></li>
+            <li>Lesson 07:<a href="#">Title</a></li>
+            <li>Lesson 08:<a href="#">Title</a></li>
+            <li>Lesson 09:<a href="#">Title</a></li>
+            <li>Lesson 10:<a href="#">Title</a></li>
+            <li>Lesson 11:<a href="#">Title</a></li>
+        </ul>
+        <p>Some lessons may need more than one activity/assignment link.</p>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="footer-content">
+                <h2 style="text-align: center;"> &copy; 2023 .:|:. Matthew A Cline .:|:. Ohio</h2>
+                <p>Last Updated:<script src="scripts/lastmodified.js"></script></p>
+            </div>
+        </div>
+    </footer>
 </body>
-</html>
