Tried to write a media query, it has not gone well

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta name="author" content="Matthew Cline">
     <meta name="description" content="WDD 230 Student Portal for Matthew Cline at BYU-Idaho, Spring Semester 2023">
     <title>BYU-Idaho Student Portal</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau&display=swap" rel="stylesheet"> 
 </head>
 <body class="content"">
     <header class="banner">
         <div class="banner-image">
-            <img src="images/Me.jpg" alt="Me">
+            <img id="Me" src="images/Me.jpg" alt="Me">
         </div>
         <div class="banner-heading"><h1>Matthew A Cline</h1></div>
     </header>
